Fixed MonitoredURL  total duration calculation

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
@@ -9,8 +10,23 @@
     <div id="example"></div>
     <!-- Dependencies -->
     <!-- Main -->
-    <!--<script src="xnode_modules/react/dist/react.js"></script>-->
-    <!--<script src="xnode_modules/react/dist/react-dom.js"></script>-->
+
+    <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyC6iHEeS4kQ0eIZ0cNo7jPWCuGS-3gtAy4",
+            authDomain: "leiaparentalcontrol.firebaseapp.com",
+            databaseURL: "https://leiaparentalcontrol.firebaseio.com",
+            storageBucket: "leiaparentalcontrol.appspot.com",
+            messagingSenderId: "737945013874"
+        };
+        firebase.initializeApp(config);
+        console.log("firebase:", firebase);
+    </script>
+    <script src="node_modules/chart.js/dist/Chart.js"></script>
+    <script src="node_modules/react/dist/react.js"></script>
+    <script src="node_modules/react-dom/dist/react-dom.js"></script>
     <script src="bundle.js"></script>
 </body>
 
